build weather app

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,14 +10,14 @@
       </div>
      
       <div class="todo-footer  js-footer">
-        <div class="city js-city"></div>
+        <div class="city js-city">???, ??</div>
         <div class="date js-date"></div>
-        <div class="icon js-icon"></div>
+        <div class="icon js-icon" style="background-image: url('http://openweathermap.org/img/wn/03d@4x.png');">???</div>
         <div class="temp js-temp"></div>
         <div class="temp">
-          <div class="temp__item js-temp-min"></div>
-          <div class="temp__item js-temp-mid"></div>
-          <div class="temp__item js-temp-max"></div>
+          <!-- <div class="temp__item js-temp-min"></div> -->
+          <div class="temp__item js-temp-mid">??? </div>
+          <!-- <div class="temp__item js-temp-max"></div> -->
         </div>
        </div>
   </div>
