--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,27 +1,29 @@
 {% extends 'layout/_main.html' %}
 {% block content %}
-<section class="section section--xl">
+<section class="section-balance">
   <div class="container">
-    <h1 class="headline headline--main">Weather in</h1>
-    <!-- <p class="headline headline--sub">Double-click to edit a temp</p> -->
-    <div class="todo">
-      <div class="todo-header">
-        <input type="text" class="todo-header__new js-input-search" placeholder="What city ????">
+    <div class="weather">
+      <div class="weather-header">
+        <input type="text" class="weather-header__new js-input-search" placeholder="What city ????">
       </div>
-     
-      <div class="todo-footer  js-footer">
-        <div class="city js-city">???, ??</div>
-        <div class="date js-date"></div>
-        <div class="icon js-icon" style="background-image: url('http://openweathermap.org/img/wn/03d@4x.png');">???</div>
-        <div class="temp js-temp"></div>
-        <div class="temp">
-          <!-- <div class="temp__item js-temp-min"></div> -->
-          <div class="temp__item js-temp-mid">??? </div>
-          <!-- <div class="temp__item js-temp-max"></div> -->
+      <div class="weather-wrap  js-footer">
+        <div class="loader js-loader"></div>
+        <div class="weather-main js-weather-main">
+          <div class="weather-main__city js-city">???, ??</div>
+          <div class="weather-main__date js-date"></div>
+          <div class="weather-main__icon js-icon"
+            style="background-image: url('http://openweathermap.org/img/wn/03d@4x.png');"></div>
+          <div class="temp js-temp"></div>
+          <div class="temp">
+            <!-- <div class="temp__item js-temp-min"></div> -->
+            <div class="temp__item js-temp-mid">??? </div>
+            <!-- <div class="temp__item js-temp-max"></div> -->
+          </div>
         </div>
-       </div>
+      </div>
+    </div>
   </div>
 </section>
 
 
-{% endblock %}
+{% endblock %}ss
