re-Fix state loading and fetch APi ( error 404)

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
         <input type="text" class="weather-header__new js-input-search" placeholder="What city ????">
       </div>
       <div class="weather-wrap  js-footer">
-        <div class="loader js-loader"></div>
+        <div hidden class="loader js-loader"></div>
         <div class="weather-main js-weather-main">
           <div class="weather-main__city js-city">???, ??</div>
           <div class="weather-main__date js-date"></div>
