re-Fix change state loader and delete unused files

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
       <div class="weather-header">
         <input type="text" class="weather-header__new js-input-search" placeholder="What city ????">
       </div>
-      <div class="weather-wrap  js-footer">
+      <div class="weather-wrap">
         <div class="loader js-loader"></div>
         <div class="weather-main js-weather-main">
           <div class="u-flex-center">
