delete unnecessary lines

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,23 +10,19 @@
         <div class="loader js-loader"></div>
         <div class="weather-main js-weather-main">
           <div class="u-flex-center">
-            <div class="weather-main__city js-city">???, ??</div> 
-            <div class="weather-main__redo js-weather-main__redo">
+            <div class="weather-main__city js-weather-main__city">???, ??</div>
+            <div class="weather-main__icon-redo js-weather-main__icon-redo">
               <i class="u-ml-10 fas fa-redo-alt"></i>
             </div>
           </div>
-          <div class="weather-main__date js-date">?? ??? ?? ????</div>
-          <div class="weather-main__icon js-icon"
-            style="background-image: url('http://openweathermap.org/img/wn/03d@4x.png');"></div>
-          <div class="temp js-temp"></div>
-          <div class="temp">
-            <div class="temp__item js-temp-mid">??? </div>
+          <div class="weather-main__date js-weather-main__date">?? ??? ?? ????</div>
+          <div class="weather-main__icon-weather js-icon-weather"
+            style="background-image: url('http://openweathermap.org/img/wn/03d@4x.png');">
           </div>
+          <div class="weather-main__temp js-weather-main__temp">??? </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-
 {% endblock %}ss
